--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-Hello World
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+    <head>
+        <meta charset="utf-8">
+        <title>TSifrer</title>
+
+        <link href="css/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
+        <link href='https://fonts.googleapis.com/css?family=Palanquin:400,300,100' rel='stylesheet' type='text/css'>
+    </head>
+    <body>
+        <div class="fullscreen">
+            <div class="centered">
+                <div class="box"></div>
+
+                <p class="title">Tomaž Šifrer</p>
+                <p class="line"></p>
+                <p class="subtitle">I write code and play computer games.</p>
+                <p class="languages">Python, Django, PosgreSQL, Git and other cool stuff</p>
+
+                <p class="location"><i class="fa fa-map-marker"></i>London, United Kingdom</p>
+
+                <p class="social-links">
+                    <span class="social"><a href="https://www.twitter.com/tsifrer"><i class="fa fa-twitter"></i></a></span>
+                    <span class="social"><a href="https://www.github.com/tsifrer"><i class="fa fa-github"></i></a></span>
+                    <span class="social"><a href="https://uk.linkedin.com/in/tomaž-šifrer-53706067"><i class="fa fa-linkedin"></i></a></span>
+                </p>
+            </div>
+        </div>
+    </body>
+</html>
