--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <p class="line"></p>
                 <p class="subtitle">I write code and play computer games.</p>
                 <p class="languages">Python, Django, Git, AWS, Docker and other cool stuff</p>
-                <p class="location"><i class="fa fa-map-marker"></i>London, United Kingdom</p>
+                <p class="location"><i class="fa fa-map-marker"></i>Ljubljana, Slovenia</p>
                 <p class="social-links">
                     <span class="social"><a href="https://www.twitter.com/tsifrer"><i class="fa fa-twitter"></i></a></span>
                     <span class="social"><a href="https://www.github.com/tsifrer"><i class="fa fa-github"></i></a></span>
